# cloud-format-converter

./: .gitignore  pyproject.toml  readme.md  setup.cfg  setup.py  structure.py
.github/workflows/: python-package.yml
examples/cloudformation/: complete_example.yaml
examples/terraform/: complete_example.tf
requirements/: requirements-dev.txt  requirements.txt
src/cloud_format_converter/: cli.py  converter.py
tests/: test_cli.py  test_converter.py
