[metadata]
name = cloud-format-converter
version = attr: cloud_format_converter.__version__
author = Your Name
author_email = your.email@example.com
description = A tool to convert between Terraform and CloudFormation formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/cloud-format-converter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pyyaml>=5.1
    python-hcl2>=2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cloud-format = cloud_format_converter.cli:main

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pre-commit
test =
    pytest
    pytest-cov
    pytest-mock
    tox

[flake8]
max-line-length = 100
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info
